--- a/gradle.properties
+++ b/gradle.properties
@@ -2,15 +2,15 @@
 org.gradle.jvmargs=-Xmx4G
 
 # Fabric Properties
-minecraft_version=1.16
-yarn_mappings=1.16+build.1:v2
-loader_version=0.8.8+build.202
+minecraft_version=1.16.4
+yarn_mappings=1.16.4+build.7:v2
+loader_version=0.10.8
 
 #Fabric api
-fabric_version=0.13.1+build.370-1.16
+fabric_version=0.27.1+1.16
 
 # Mod Properties
-mod_version=1.1.4-1.16
+mod_version=1.1.5-1.16
 maven_group = net.kyrptonaught
 archives_base_name=coloredcampfire
 
